--- a/ScadeSuiteWeb.Client/Editor/SuiteEditor.razor
+++ b/ScadeSuiteWeb.Client/Editor/SuiteEditor.razor
@@ -79,30 +79,17 @@
     </FluentMultiSplitterPane>
 
     @* 中 panle index 1 *@
-    <FluentMultiSplitterPane Size="65%">
-        <FluentMultiSplitter OnResize="@OnResizeHandler" Orientation="Orientation.Vertical">
+    <FluentMultiSplitterPane Size="65%" Collapsible="true" >
+        <FluentMultiSplitter  OnResize="@OnResizeHandler" Orientation="Orientation.Vertical">
             <FluentMultiSplitterPane Size="70%" Collapsible="true">
-            
                 @* 中间画布 *@
                 <MainCanvasContent SelectedNodeModel="selectedNodeModel"/>
-                
             </FluentMultiSplitterPane>
             
             <FluentMultiSplitterPane Size="30%" Collapsible="true">
                 Console log
-                
-                
-
-        <FluentDropZone Id="Item2" Draggable="true" Droppable="true">
-            <div style="width: 50px; height: 50px; background-color: lightgreen;">
-                Item 2
-            </div>
-        </FluentDropZone>
-                
-                
-                
-                
             </FluentMultiSplitterPane>
+            
         </FluentMultiSplitter>
     </FluentMultiSplitterPane>
 
