--- a/ScadeSuiteWeb.Client/Editor/Draw/Drawer.razor
+++ b/ScadeSuiteWeb.Client/Editor/Draw/Drawer.razor
@@ -1,20 +1,17 @@
-﻿@using ParseSuite
+﻿@using Blazor.Diagrams.Components
+
+@using Blazor.Diagrams.Components.Widgets
+@using ParseSuite
 @inject IJSRuntime Js
 
 <div style="width:100%; height:100%; ">
-    <div id="container"></div>
-</div>
+   @*  <div id="container"></div> *@
 
-    
-@code {
-    [Parameter]
-    public SSNode? NodeModel { get; set; }
-    
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            await Js.InvokeVoidAsync("initializeGraph");
-        }
-    }
-}
+       <CascadingValue Value="Diagram" IsFixed="true">
+        <DiagramCanvas>
+            		<Widgets>
+            			<GridWidget Size="30" Mode="GridMode.Line" BackgroundColor="white" />
+            		</Widgets>
+        </DiagramCanvas>
+    </CascadingValue>
+</div>
