--- a/ScadeSuiteWeb.Client/Editor/NodeModel/AddFuncNode.razor
+++ b/ScadeSuiteWeb.Client/Editor/NodeModel/AddFuncNode.razor
@@ -18,8 +18,7 @@
     <line x1="50" y1="40" x2="60" y2="40" style="stroke:black;stroke-width:1" />
 
     <!-- Draw the AVG text in the center of the rectangle -->
-    <text x="35" y="35" font-family="Arial" font-size="14" fill="black">Add</text>
-    
+    <text x="35" y="35" font-family="Arial" font-size="14" fill="black">@Node.Title</text>
 </svg>
 
 <PortRenderer @key="'r'" Port="Node.GetPort(PortAlignment.Right)">
