--- a/ScadeSuiteWeb.Client/Editor/NodeModel/OutputNode.razor
+++ b/ScadeSuiteWeb.Client/Editor/NodeModel/OutputNode.razor
@@ -8,7 +8,7 @@
         <line id="svg_blue_line" x1="50" y1="60" x2="30" y2="60" stroke="#000" stroke-width="3"/>
 
         <text fill="black" x="60" y="50" font-size="16px" font-family="Arial" text-anchor="start">
-            aaa
+            @Node.Title
         </text>
     </g>
     
